compiler/testData/asJava/lightClasses/compilationErrors/InlineOnly.java
public final class A {
    public static final void f() { /* compiled code */ }
}